Mon May 22 13:44:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Slightly improved summary reporting in apitest.

Mon May 22 13:28:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a memory leak in SleepyDatabase (when database doesn't
	  exist).

Mon May 22 13:08:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* apitest can now run all the tests against sleepycat as well as
	  inmemory tables.  The actual call is currently protected by
	  #if 0.

Fri May 19 18:35:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Abstracted all database access in apitest to one function, so that
	  it can easily be made to run with different backends.

Fri May 19 16:30:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed raw uses of "cout" and "cerr" in net code to use
	  DebugMsg instead.

Fri May 19 15:58:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add test to nettest to try to do an expand.  Currently fails, since
	  this isn't implemented.

Fri May 19 11:48:15 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* MultiMatch::get_max_weight() now returns the maximum of the
	  max_weights from the submatchers, rather than just the first one.
	  This ensures that the correct value is returned in the case of
	  a multimatch with relevant documents in some of the submatchers.

	* Fix some test cases so that they test the correct things.

Fri May 19 11:43:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Further test to check that rset weights are getting distributed
	  correctly in multidatabase cases.

Thu May 18 18:11:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* MultiMatch now splits up RSets appropriately for each of its sub
	  databases, so multimatch stuff works correctly with RSets.

Thu May 18 17:14:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Work on testsuite.  Many useful macros produced, tests simplified,